# AtRadio-console

./: README.md  README_en.md  TODO.md  atradio.py  keys.py  pyproject.toml
data/: radio_stations.csv  ru_radio_stations_tatar.csv
old/: atradio-console.py
ui/: ui_app.py  ui_interface.py
